--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="button" value="2" onclick="displayValue(2)">
             <input type="button" value="3" onclick="displayValue(3)">
             <input type="button" value="+" id="operator" onclick="operate('+')">
-            <input type="button" id="maisMenos" value="+/-">
+            <input type="button" id="maisMenos" value="+/-" onclick="changeSign()">
             <input type="button" value="0" onclick="displayValue(0)">
             <input type="button" value="." onclick="decimal()">
             <input type="button" value="=" id="equal" onclick="calcular()">
